--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,14 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - master
 
 pool:
-  vmImage: ubuntu-latest
+  name: Default  # Change this to the name of your self-hosted agent pool
 
 steps:
-- script: echo Hello, world!
+- script: echo "Hello, world!"
   displayName: 'Run a one-line script'
 
 - script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
+    echo "Build, test, and deploy your project here."
+    echo "Using a self-hosted agent to bypass hosted parallelism issues."
   displayName: 'Run a multi-line script'
